--- a/Code/US_Unemploymet/templates/index.html
+++ b/Code/US_Unemploymet/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>US Unemploymet</title>
+    <title>US Unemployment</title>
     <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> -->
 
     <!-- Leaflet CSS & JS -->
@@ -30,7 +30,7 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4aaaa5">
-        <a class="navbar-brand" href="index.html"><i class="fa fa-fw fa-home"></i>US Unemploymet</a>
+        <a class="navbar-brand" href="index.html"><i class="fa fa-fw fa-home"></i>US Unemployment</a>
         <button class="navbar-toggler border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,10 +40,10 @@
 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="second_page.html">second_page<span class="sr-only"></span></a>
+                    <a class="nav-link" href="demographics.html">Demographics<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="third_page.html">third_page</a>
+                    <a class="nav-link" href="industry_stats.html">Industry</a>
                 </li>
             </ul>
         </div>
