--- a/Code/US_Unemploymet/templates/index.html
+++ b/Code/US_Unemploymet/templates/index.html
@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js"></script>
 
     <!--CSS Link-->
-    <link rel="stylesheet" href="/Users/zennureozbekacar/Desktop/proje-2-study/Code/US_Unemploymet/static/css/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -48,15 +48,6 @@
             </ul>
         </div>
     </nav>
-
-
-    <!-- <div class="navbar">
-        <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-        <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
-        <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-        <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
-    </div> -->
-
 
     <div class="container">
         <div class="jumbotron">
