--- a/Code/US_Unemploymet/templates/index.html
+++ b/Code/US_Unemploymet/templates/index.html
@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js"></script>
 
     <!--CSS Link-->
-    <link rel="stylesheet" href="/Users/zennureozbekacar/Desktop/proje-2-study/Code/US_Unemploymet/static/css/style.css">
+    <!-- <link rel="stylesheet" href="/Users/zennureozbekacar/Desktop/proje-2-study/Code/US_Unemploymet/static/css/style.css"> -->
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -89,8 +89,12 @@
 
 
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<!-- <script src="{{ url_for('static', filename='js/app.js') }}"></script> -->
+<!-- Our JavaScript -->
+<script src="{{ url_for('static', filename='js/config.js') }}"></script>
+<script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
+  <!-- <script type="text/javascript" src="static/js/config.js"></script>
+  <script type="text/javascript" src="static/js/logic.js"></script> -->
 <!-- Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
