--- a/Code/US_Unemploymet/templates/demographics.html
+++ b/Code/US_Unemploymet/templates/demographics.html
@@ -12,17 +12,17 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4aaaa5">
-        <a class="navbar-brand" href="index.html"><i class="fa fa-fw fa-home"></i>US Unemployment</a>
+        <a class="navbar-brand" href="/"><i class="fa fa-fw fa-home"></i>US Unemployment</a>
         <button class="navbar-toggler border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="demographics.html">Demographics<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/demographics/">Demographics<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="industry_stats.html">Industry</a>
+                    <a class="nav-link" href="/industry_stats/">Industry</a>
                 </li>
             </ul>
         </div>
@@ -53,21 +53,21 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <h6 class="text-center">Age</h6>
-                        <img src="assets/images/Age-ranges.png" class="viz-img img-fluid rounded" alt="Statistics by Age">
+                        <img src="{{ url_for('static', filename='assets/images/Age-ranges.png') }}"  class="viz-img img-fluid rounded" alt="Statistics by Age">
                     </div>
                     <div class="col-lg-6">
                         <h6 class="text-center">Education</h6>
-                        <img src="assets/images/education.png" class="viz-img img-fluid rounded" alt="Statistics by Education">
+                        <img src="{{ url_for('static', filename='assets/images/education.png') }}" class="viz-img img-fluid rounded" alt="Statistics by Education">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-6">
                         <h6 class="text-center">Gender</h6>
-                        <img src="assets/images/gender.jpg" class="viz-img img-fluid rounded" alt="Statistics by Gender">
+                        <img src="{{ url_for('static', filename='assets/images/gender.jpg') }}"  class="viz-img img-fluid rounded" alt="Statistics by Gender">
                     </div>
                     <div class="col-lg-6">
                         <h6 class="text-center">Race</h6>
-                        <img src="assets/images/race.jpeg" class="viz-img img-fluid rounded" alt="Statistics by Race">
+                        <img src="{{ url_for('static', filename='assets/images/race.jpeg') }}" class="viz-img img-fluid rounded" alt="Statistics by Race">
                     </div>
                 </div>
             </div>
