--- a/Code/US_Unemployment/templates/index.html
+++ b/Code/US_Unemployment/templates/index.html
@@ -78,12 +78,18 @@
         </div>
 
     </div>
+
+
+<div>
+    <!-- RSS feed -->
+    <script type='text/javascript' charset='utf-8' src='https://scripts.hashemian.com/jss/feed.js?print=yes&numlinks=10&summarylen=50&seedate=yes&popwin=no&url=https:%2F%2Fwww.bls.gov%2Ffeed%2Flaus.rss'></script>
+</div>
 </body>
 
 <!-- Footer -->
 <footer class="footer navbar-expand-lg navbar-dark text-center" style="background-color: #4aaaa5">
     <div class="footer-copyright">
-        <div class="top"> <span> © Copyright Data Vizards 2020?</span>
+        <div class="top"> <span> © Copyright Data Vizards 2020</span>
         </div>
     </div>
 </footer>
