--- a/Code/US_Unemployment/templates/demographics.html
+++ b/Code/US_Unemployment/templates/demographics.html
@@ -3,10 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Bootstrap Components</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.2.0/css/bootstrap-slider.min.css" />
-    <link rel="stylesheet" href="../static/css/style.css">
+    <title>US Unemployment Demographics</title>
+
+    <!--CSS Link-->
+    <script src="{{ url_for('static', filename='css/style.css') }}"></script>
+    <!-- <link rel="stylesheet" href="static/css/style.css"> -->
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- Load an icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -27,52 +34,24 @@
             </ul>
         </div>
     </nav>
-    <div>
-        <div class="container">
-            <div class="grid-box"> ​
-                <div class="row">
-                    <h4> Yearly Unemployment Compensation Claims</h4>
-                    <hr class="my-4" style="width: 100%; height: 1px;">
-                </div>
-                <!--<div class="row" style="font-size: medium">Year: </div> -->
-                <div class="row" style="font-size: medium">Year:
-                    <input type="range">
-                </div>
-                <div class="row" style="font-size: medium">Claim Type:
-                    <!-- Group of default radios - option 1 -->
-                    <div class="custom-control custom-radio">
-                        <input type="radio" class="custom-control-input" id="defaultGroupExample1" name="groupOfDefaultRadios" checked>
-                        <label class="custom-control-label" for="defaultGroupExample1">Initial Claims</label>
-                    </div>
-                    <!-- Group of default radios - option 2 -->
-                    <div class="custom-control custom-radio">
-                        <input type="radio" class="custom-control-input" id="defaultGroupExample2" name="groupOfDefaultRadios">
-                        <label class="custom-control-label" for="defaultGroupExample2">Continued Claims</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h6 class="text-center">Age</h6>
-                        <img src="{{ url_for('static', filename='assets/images/Age-ranges.png') }}"  class="viz-img img-fluid rounded" alt="Statistics by Age">
-                    </div>
-                    <div class="col-lg-6">
-                        <h6 class="text-center">Education</h6>
-                        <img src="{{ url_for('static', filename='assets/images/education.png') }}" class="viz-img img-fluid rounded" alt="Statistics by Education">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h6 class="text-center">Gender</h6>
-                        <img src="{{ url_for('static', filename='assets/images/gender.jpg') }}"  class="viz-img img-fluid rounded" alt="Statistics by Gender">
-                    </div>
-                    <div class="col-lg-6">
-                        <h6 class="text-center">Race</h6>
-                        <img src="{{ url_for('static', filename='assets/images/race.jpeg') }}" class="viz-img img-fluid rounded" alt="Statistics by Race">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class='tableauPlaceholder' id='viz1591646010133' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;US_Unemployment_Demo_Dashboard&#47;Dash-Layout2&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='US_Unemployment_Demo_Dashboard&#47;Dash-Layout2' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;US_Unemployment_Demo_Dashboard&#47;Dash-Layout2&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>
+    <script type='text/javascript'>
+        var divElement = document.getElementById('viz1591646010133');
+        var vizElement = divElement.getElementsByTagName('object')[0];
+        if (divElement.offsetWidth > 800) {
+            vizElement.style.width = '1366px';
+            vizElement.style.height = '795px';
+        } else if (divElement.offsetWidth > 500) {
+            vizElement.style.width = '1366px';
+            vizElement.style.height = '795px';
+        } else {
+            vizElement.style.width = '100%';
+            vizElement.style.height = '1577px';
+        }
+        var scriptElement = document.createElement('script');
+        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+        vizElement.parentNode.insertBefore(scriptElement, vizElement);
+    </script>
 </body>
 <!-- Footer -->
 <footer class="footer navbar-expand-lg navbar-dark text-center" style="background-color: #4aaaa5">
@@ -81,10 +60,8 @@
         </div>
     </div>
 </footer>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-​
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 </html>
