--- a/Code/US_Unemployment/templates/index.html
+++ b/Code/US_Unemployment/templates/index.html
@@ -114,6 +114,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <!-- Our JavaScript -->
+<script src="{{ url_for('static', filename='js/choropleth.js') }}"></script>
 <script src="{{ url_for('static', filename='js/config.js') }}"></script>
 <script src="{{ url_for('static', filename='js/us-states.js') }}"></script>
 <script src="{{ url_for('static', filename='js/app.js') }}"></script>
