--- a/Code/US_Unemployment/static/css/style.css
+++ b/Code/US_Unemployment/static/css/style.css
@@ -15,6 +15,8 @@
 
 html {
     height: 100%;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 
 body {
@@ -22,6 +24,18 @@ body {
     margin: 0;
     padding-bottom: 6rem;
     min-height: 100%;
+}
+
+#tableauPlaceholder::-webkit-scrollbar {
+    width: 0 !important;
+    scrollbar-width: none;
+}
+
+.tableauPlaceholder div {
+    display: block;
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
 }
 
 .footer {
