--- a/Code/US_Unemployment/templates/industry_stats.html
+++ b/Code/US_Unemployment/templates/industry_stats.html
@@ -6,7 +6,8 @@
     <title>Bootstrap Components</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.2.0/css/bootstrap-slider.min.css" />
-    <link rel="stylesheet" href="../static/css/style.css">
+    <script src="{{ url_for('static', filename='css/style.css') }}"></script>
+    <!-- <link rel="stylesheet" href="static/css/style.css"> -->
     <script src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
 </head>
 
