--- a/Code/US_Unemployment/templates/demographics.html
+++ b/Code/US_Unemployment/templates/demographics.html
@@ -19,17 +19,17 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4aaaa5">
-        <a class="navbar-brand" href="index.html"><i class="fa fa-fw fa-home"></i>US Unemployment</a>
+        <a class="navbar-brand" href="/"><i class="fa fa-fw fa-home"></i>US Unemployment</a>
         <button class="navbar-toggler border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="demographics.html">Demographics<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/demographics/">Demographics<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="industry_stats.html">Industry</a>
+                    <a class="nav-link" href="/industry_stats/">Industry</a>
                 </li>
             </ul>
         </div>
