Adding code for positioning the rss feed

--- a/Code/US_Unemployment/templates/index.html
+++ b/Code/US_Unemployment/templates/index.html
@@ -49,8 +49,6 @@
             </ul>
         </div>
     </nav>
-
-
     <div class="container">
         <div class="jumbotron">
             <div class="row">
@@ -72,21 +70,19 @@
                 </div> -->
                 <div id="map" style="height: 610px; width:100%"></div>
             </div>
-            <br>
-
+        </div>
+        <div class="row">
             <div class="col-md-8">
                 <div id="bar"></div>
             </div>
-
+            <div class="col-md-4">
+                <!-- RSS feed -->
+                <script type='text/javascript' charset='utf-8' src='https://scripts.hashemian.com/jss/feed.js?print=yes&numlinks=5&summarylen=0&seedate=yes&popwin=no&url=https:%2F%2Fwww.bls.gov%2Ffeed%2Flaus.rss'></script>
+            </div>
         </div>
+    </div>
 
-
-        <div>
-            <!-- RSS feed -->
-            <script type='text/javascript' charset='utf-8' src='https://scripts.hashemian.com/jss/feed.js?print=yes&numlinks=10&summarylen=50&seedate=yes&popwin=no&url=https:%2F%2Fwww.bls.gov%2Ffeed%2Flaus.rss'></script>
-        </div>
 </body>
-
 <!-- Footer -->
 <footer class="footer navbar-expand-lg navbar-dark text-center" style="background-color: #4aaaa5">
     <div class="footer-copyright">
@@ -94,7 +90,6 @@
         </div>
     </div>
 </footer>
-
 <!-- Leaflet plotly -->
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <!-- Leaflet JavaScript -->
