--- a/Code/US_Unemployment/templates/index.html
+++ b/Code/US_Unemployment/templates/index.html
@@ -16,15 +16,16 @@
     <!--D3 cdn-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js"></script>
 
-    <!--CSS Link-->
-    <script src="{{ url_for('static', filename='css/style.css') }}"></script>
-    <!-- <link rel="stylesheet" href="static/css/style.css"> -->
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- Load an icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--CSS Link-->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"></script>
+    <!-- <link rel="stylesheet" href="static/css/style.css"> -->
+
 
 </head>
 
@@ -49,6 +50,8 @@
             </ul>
         </div>
     </nav>
+
+
     <div class="container">
         <div class="jumbotron">
             <div class="row">
@@ -70,19 +73,21 @@
                 </div> -->
                 <div id="map" style="height: 610px; width:100%"></div>
             </div>
-        </div>
-        <div class="row">
+            <br>
+
             <div class="col-md-8">
                 <div id="bar"></div>
             </div>
-            <div class="col-md-4">
-                <!-- RSS feed -->
-                <script type='text/javascript' charset='utf-8' src='https://scripts.hashemian.com/jss/feed.js?print=yes&numlinks=5&summarylen=0&seedate=yes&popwin=no&url=https:%2F%2Fwww.bls.gov%2Ffeed%2Flaus.rss'></script>
-            </div>
-        </div>
-    </div>
 
+        </div>
+
+
+        <div>
+            <!-- RSS feed -->
+            <script type='text/javascript' charset='utf-8' src='https://scripts.hashemian.com/jss/feed.js?print=yes&numlinks=10&summarylen=50&seedate=yes&popwin=no&url=https:%2F%2Fwww.bls.gov%2Ffeed%2Flaus.rss'></script>
+        </div>
 </body>
+
 <!-- Footer -->
 <footer class="footer navbar-expand-lg navbar-dark text-center" style="background-color: #4aaaa5">
     <div class="footer-copyright">
@@ -90,6 +95,7 @@
         </div>
     </div>
 </footer>
+
 <!-- Leaflet plotly -->
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <!-- Leaflet JavaScript -->
