--- a/Code/US_Unemployment/static/css/style.css
+++ b/Code/US_Unemployment/static/css/style.css
@@ -4,7 +4,7 @@
     margin-left: 100px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: large;
-    background-color: #4aaaa5;
+    background-color: #4e5180;
 }
 
 .nav-item {
@@ -40,12 +40,24 @@ body {
 
 .footer {
     position: absolute;
+    height: 70px;
     right: 0;
     bottom: 0;
     left: 0;
     padding: 1rem;
-    background-color: #4aaaa5;
+    background: linear-gradient( rgba(83, 132, 223, 0.45), #14113a98);
+}
+
+.footer {
     text-align: center;
+}
+
+.footer ul {
+    list-style: none;
+}
+
+.footer ul li {
+    display: inline;
 }
 
 .sublegend-color {
@@ -65,11 +77,11 @@ body {
     margin-top: 0px;
 }
 
-
 .legend {
     line-height: 18px;
     color: #555;
 }
+
 .legend i {
     width: 18px;
     height: 18px;
@@ -77,6 +89,7 @@ body {
     margin-right: 8px;
     opacity: 0.7;
 }
+
 
 /* Media Queries */
 
