--- a/Code/US_Unemployment/templates/index.html
+++ b/Code/US_Unemployment/templates/index.html
@@ -23,7 +23,8 @@
     <!-- Load an icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--CSS Link-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    </script>
     <!-- <link rel="stylesheet" href="static/css/style.css"> -->
 
 
@@ -31,7 +32,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4aaaa5">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#4e5180">
         <a class="navbar-brand" href="/"><i class="fa fa-fw fa-home"></i>US Unemployment</a>
         <button class="navbar-toggler border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -73,26 +74,31 @@
                 </div> -->
                 <div id="map" style="height: 610px; width:100%"></div>
             </div>
-            <br>
-
+        </div>
+        <div class="row">
             <div class="col-md-8">
                 <div id="bar"></div>
             </div>
-
+            <div class="col-md-4">
+                <p>
+                    <h6>U.S. Bureau of Labor Statistics - Latest News </h6>
+                </p>
+                <!-- RSS feed -->
+                <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=https%3A%2F%2Fwww.bls.gov%2Ffeed%2Flaus.rss&num=5&date=y&utf=y" charset="UTF-8" type="text/javascript"></script>
+            </div>
         </div>
-
-
-        <div>
-            <!-- RSS feed -->
-            <script type='text/javascript' charset='utf-8' src='https://scripts.hashemian.com/jss/feed.js?print=yes&numlinks=10&summarylen=50&seedate=yes&popwin=no&url=https:%2F%2Fwww.bls.gov%2Ffeed%2Flaus.rss'></script>
-        </div>
+    </div>
 </body>
-
 <!-- Footer -->
-<footer class="footer navbar-expand-lg navbar-dark text-center" style="background-color: #4aaaa5">
-    <div class="footer-copyright">
-        <div class="top"> <span> © Copyright Data Vizards 2020</span>
-        </div>
+<footer class="footer">
+    <div>
+        <h6>Team Data Vizards</h6>
+        <ul>
+            <li>Zen Acar | </li>
+            <li> Gina Cameras | </li>
+            <li> Harini Rao | </li>
+            <li> Carlos Santillan </li>
+        </ul>
     </div>
 </footer>
 
