--- a/Code/US_Unemployment/templates/industry_stats.html
+++ b/Code/US_Unemployment/templates/industry_stats.html
@@ -6,14 +6,14 @@
     <title>Bootstrap Components</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.2.0/css/bootstrap-slider.min.css" />
-    <script src="{{ url_for('static', filename='css/style.css') }}"></script>
-    <!-- <link rel="stylesheet" href="static/css/style.css"> -->
     <script src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
+    <!--CSS Link-->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
 <body onload="initViz();">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4aaaa5">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4e5180">
         <a class="navbar-brand" href="/"><i class="fa fa-fw fa-home"></i>US Unemployment</a>
         <button class="navbar-toggler border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -59,10 +59,15 @@
     </div>
 </body>
 <!-- Footer -->
-<footer class="footer navbar-expand-lg navbar-dark text-center" style="background-color: #4aaaa5">
-    <div class="footer-copyright">
-        <div class="top"> <span> © Copyright Data Vizards 2020</span>
-        </div>
+<footer class="footer">
+    <div>
+        <h6>Team Data Vizards</h6>
+        <ul>
+            <li>Zen Acar | </li>
+            <li> Gina Cameras | </li>
+            <li> Harini Rao | </li>
+            <li> Carlos Santillan </li>
+        </ul>
     </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
