--- a/US_Unemployment/templates/index.html
+++ b/US_Unemployment/templates/index.html
@@ -53,7 +53,7 @@
     </nav>
 
 
-    <div class="container">
+    <!-- <div class="container"></div> -->
         <div class="jumbotron">
             <div class="row">
                 <div class="col-md-2">
@@ -72,7 +72,7 @@
                         <select id="selDataset" onchange="optionChanged(this.value)"></select>
                     </div>
                 </div> -->
-                <div id="map" style="height: 610px; width:100%"></div>
+                <div id="map" style="height: 610px; width:80%"></div>
             </div>
         </div>
         <div class="row">
@@ -87,7 +87,7 @@
                 <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=https%3A%2F%2Fwww.bls.gov%2Ffeed%2Flaus.rss&num=5&date=y&utf=y" charset="UTF-8" type="text/javascript"></script>
             </div>
         </div>
-    </div>
+    <!-- </div> -->
 </body>
 <!-- Footer -->
 <footer class="footer">
