--- a/US_Unemployment/templates/demographics.html
+++ b/US_Unemployment/templates/demographics.html
@@ -17,38 +17,40 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4e5180">
-        <a class="navbar-brand" href="/"><i class="fa fa-fw fa-home"></i>US Unemployment</a>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#034E7B">
+        <a class="navbar-brand" href="/">US Unemployment</a>
         <button class="navbar-toggler border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/demographics/">Demographics<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" style="color: white" href="/demographics/">Demographics<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/industry_stats/">Industry</a>
+                    <a class="nav-link" style="color: white" href="/industry_stats/">Industry</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <div class='tableauPlaceholder' id='viz1591675698605' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;US_Unemployment_Demo_Dashboard&#47;Unemployment-Story&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='US_Unemployment_Demo_Dashboard&#47;Unemployment-Story' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;US_Unemployment_Demo_Dashboard&#47;Unemployment-Story&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>
-    <script type='text/javascript'>
-        var divElement = document.getElementById('viz1591675698605');
-        var vizElement = divElement.getElementsByTagName('object')[0];
-        vizElement.style.width = '1366px';
-        vizElement.style.height = '795px';
-        var scriptElement = document.createElement('script');
-        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-        vizElement.parentNode.insertBefore(scriptElement, vizElement);
-    </script>
+    <div class="container">
+        <div class='tableauPlaceholder' id='viz1591675698605' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;US_Unemployment_Demo_Dashboard&#47;Unemployment-Story&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='US_Unemployment_Demo_Dashboard&#47;Unemployment-Story' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;US_Unemployment_Demo_Dashboard&#47;Unemployment-Story&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>
+        <script type='text/javascript'>
+            var divElement = document.getElementById('viz1591675698605');
+            var vizElement = divElement.getElementsByTagName('object')[0];
+            vizElement.style.width = '1200px';
+            vizElement.style.height = '800px';
+            var scriptElement = document.createElement('script');
+            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);
+        </script>
+    </div>
 </body>
 <!-- Footer -->
 <!-- Footer -->
 <footer class="footer">
     <div>
-        <h6>Team Data Vizards</h6>
+        <h6> © Team Data Vizards</h6>
         <ul>
             <li>Zen Acar | </li>
             <li> Gina Cameras | </li>
