--- a/US_Unemployment/templates/industry_stats.html
+++ b/US_Unemployment/templates/industry_stats.html
@@ -13,18 +13,18 @@
 
 <body onload="initViz();">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4e5180">
-        <a class="navbar-brand" href="/"><i class="fa fa-fw fa-home"></i>US Unemployment</a>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#034E7B">
+        <a class="navbar-brand" href="/">US Unemployment</a>
         <button class="navbar-toggler border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/demographics/">Demographics</a>
+                    <a class="nav-link" style="color: white" href="/demographics/">Demographics</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/industry_stats/">Industry<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" style="color: white" href="/industry_stats/">Industry<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
@@ -61,7 +61,7 @@
 <!-- Footer -->
 <footer class="footer">
     <div>
-        <h6>Team Data Vizards</h6>
+        <h6> © Team Data Vizards</h6>
         <ul>
             <li>Zen Acar | </li>
             <li> Gina Cameras | </li>
