--- a/US_Unemployment/templates/index.html
+++ b/US_Unemployment/templates/index.html
@@ -32,8 +32,8 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#4e5180">
-        <a class="navbar-brand" href="/"><i class="fa fa-fw fa-home"></i>US Unemployment</a>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#034E7B">
+        <a class="navbar-brand" href="/">US Unemployment</a>
         <button class="navbar-toggler border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,10 +43,10 @@
 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/demographics/">Demographics<span class="sr-only"></span></a>
+                    <a class="nav-link" style="color: white" href="/demographics/">Demographics<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/industry_stats/">Industry</a>
+                    <a class="nav-link" style="color: white" href="/industry_stats/">Industry</a>
                 </li>
             </ul>
         </div>
@@ -92,7 +92,7 @@
 <!-- Footer -->
 <footer class="footer">
     <div>
-        <h6>Team Data Vizards</h6>
+        <h6> © Team Data Vizards</h6>
         <ul>
             <li>Zen Acar | </li>
             <li> Gina Cameras | </li>
