--- a/US_Unemployment/templates/demographics.html
+++ b/US_Unemployment/templates/demographics.html
@@ -34,10 +34,12 @@
         </div>
     </nav>
     <div class="container">
-        <div class='tableauPlaceholder' id='viz1591675698605' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;US_Unemployment_Demo_Dashboard&#47;Unemployment-Story&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='US_Unemployment_Demo_Dashboard&#47;Unemployment-Story' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;US_Unemployment_Demo_Dashboard&#47;Unemployment-Story&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>
+        <div class='tableauPlaceholder' id='viz1591895137721' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;US_Unemployment_2015_2020&#47;Unemployment-Study&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='US_Unemployment_2015_2020&#47;Unemployment-Study' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;US_Unemployment_2015_2020&#47;Unemployment-Study&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>
         <script type='text/javascript'>
-            var divElement = document.getElementById('viz1591675698605');
+            var divElement = document.getElementById('viz1591895137721');
             var vizElement = divElement.getElementsByTagName('object')[0];
+            /*vizElement.style.width = '100%';
+            vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';*/
             vizElement.style.width = '1200px';
             vizElement.style.height = '800px';
             var scriptElement = document.createElement('script');
