--- a/US_Unemployment/templates/index.html
+++ b/US_Unemployment/templates/index.html
@@ -75,19 +75,20 @@
             <div id="map" style="height: 610px; width:80%"></div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-8">
-            <div id="bar"></div>
-        </div>
-        <div class="col-md-4">
-            <p>
-                <h6>U.S. Bureau of Labor Statistics - Latest News </h6>
-            </p>
-            <!-- RSS feed -->
-            <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=https%3A%2F%2Fwww.bls.gov%2Ffeed%2Flaus.rss&num=5&date=y&utf=y" charset="UTF-8" type="text/javascript"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <div id="bar"></div>
+            </div>
+            <div class="col-md-4" style="text-align: justify;">
+                <p>
+                    <h6>U.S. Bureau of Labor Statistics - Latest News </h6>
+                </p>
+                <!-- RSS feed -->
+                <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=https%3A%2F%2Fwww.bls.gov%2Ffeed%2Flaus.rss&num=5&date=y&utf=y" charset="UTF-8" type="text/javascript"></script>
+            </div>
         </div>
     </div>
-    <!-- </div> -->
 </body>
 <!-- Footer -->
 <footer class="footer">
