--- a/US_Unemployment/templates/index.html
+++ b/US_Unemployment/templates/index.html
@@ -54,9 +54,10 @@
 
 
     <!-- <div class="container"></div> -->
-    <div class="jumbotron">
+    <div class="container-fluid">
+        <!-- <div class="jumbotron"> -->
         <div class="row">
-            <div class="col-md-2">
+            <div class="col-md-12 row" style="height: fit-content; width:fit-content">
                 <div class="states">
                     <h5>State:</h5>
                     <select id="selState"></select>
@@ -66,20 +67,33 @@
                     <select id="selYear"></select>
                 </div>
             </div>
-            <!-- <div class="col-md-2">
+        </div>
+        <div class="row">
+            <div class="col-md-8">
+                <div id="map" style="width: 100%; height: 800px; "></div>
+            </div>
+
+            <div class="col-md-4">
+                <div id="bar" style="width: 60%; height: 60%;"></div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="col-md-2">
                     <div class="well">
                         <h5>State:</h5>
                         <select id="selDataset" onchange="optionChanged(this.value)"></select>
                     </div>
                 </div> -->
-            <div id="map" style="height: 610px; width:80%"></div>
-        </div>
+
+
+    <!-- </div> -->
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-md-8">
+            <!-- <div class="col-md-8">
                 <div id="bar"></div>
-            </div>
+            </div> -->
             <div class="col-md-4" style="text-align: justify;">
                 <p>
                     <h6>U.S. Bureau of Labor Statistics - Latest News </h6>
