--- a/US_Unemployment/templates/index.html
+++ b/US_Unemployment/templates/index.html
@@ -53,10 +53,8 @@
     </nav>
 
 
-    <!-- <div class="container"></div> -->
     <div class="container-fluid">
-        <!-- <div class="jumbotron"> -->
-        <div class="row">
+        <div class="row" style="margin: 20px;">
             <div class="col-md-12 row" style="height: fit-content; width:fit-content">
                 <div class="states">
                     <h5>State:</h5>
@@ -91,9 +89,6 @@
     </div>
     <div class="container">
         <div class="row">
-            <!-- <div class="col-md-8">
-                <div id="bar"></div>
-            </div> -->
             <div class="col-md-4" style="text-align: justify;">
                 <p>
                     <h6>U.S. Bureau of Labor Statistics - Latest News </h6>
