--- a/US_Unemployment/templates/demographics.html
+++ b/US_Unemployment/templates/demographics.html
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link" style="color: white" href="/industry_stats/">Industry</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="color: white" href="/datasources/">Datasources</a>
+                </li>
             </ul>
         </div>
     </nav>
