--- a/US_Unemployment/templates/industry_stats.html
+++ b/US_Unemployment/templates/industry_stats.html
@@ -26,6 +26,9 @@
                 <li class="nav-item">
                     <a class="nav-link" style="color: white" href="/industry_stats/">Industry<span class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="color: white" href="/references/">References</a>
+                </li>
             </ul>
         </div>
     </nav>
