Fixing the link for references from Demographics

--- a/US_Unemployment/templates/demographics.html
+++ b/US_Unemployment/templates/demographics.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" style="color: white" href="/industry_stats/">Industry</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="color: white" href="/datasources/">Datasources</a>
+                    <a class="nav-link" style="color: white" href="/references/">References</a>
                 </li>
             </ul>
         </div>
