Correcting the URLs for data sources in references

--- a/US_Unemployment/templates/references.html
+++ b/US_Unemployment/templates/references.html
@@ -60,10 +60,10 @@
                 <li>State level unemployment data from 2015 - Present (Weekly) - https://oui.doleta.gov/unemploy/claims.asp
                     <a href="https://oui.doleta.gov/unemploy/claims.asp"></a>
                 </li>
-                <li>Demographic level unemployment data (Monthly) - https://oui.doleta.gov/unemploy/claims.asp
+                <li>Demographic level unemployment data (Monthly) - https://download.bls.gov/pub/time.series/ln/
                     <a href="https://download.bls.gov/pub/time.series/ln/"></a>
                 </li>
-                <li>Industry level employment data (Monthly) - https://oui.doleta.gov/unemploy/claims.asp
+                <li>Industry level employment data (Monthly) - https://download.bls.gov/pub/time.series/ce/
                     <a href="https://download.bls.gov/pub/time.series/ce/"></a>
                 </li>
             </ul>
