--- a/US_Unemployment/templates/references.html
+++ b/US_Unemployment/templates/references.html
@@ -57,14 +57,14 @@
             <p>The goal of this project is to develop an interactive, web-based visual application showcasing a real-world dataset, namely US unemployment through the ongoing COVID pandemic.The primary sources of data are the unemployment insurance weekly
                 claims data from the US Department of Labor and labor force statistics from the current population survey (CPS) of the U.S. Bureau of Labor Statistics as listed below.</p>
             <ul>
-                <li>State level unemployment data from 2015 - Present (Weekly) - https://oui.doleta.gov/unemploy/claims.asp
-                    <a href="https://oui.doleta.gov/unemploy/claims.asp"></a>
+                <li>State level unemployment data from 2015 - Present (Weekly) - 
+                    <a href="https://oui.doleta.gov/unemploy/claims.asp">https://oui.doleta.gov/unemploy/claims.asp</a>
                 </li>
-                <li>Demographic level unemployment data (Monthly) - https://download.bls.gov/pub/time.series/ln/
-                    <a href="https://download.bls.gov/pub/time.series/ln/"></a>
+                <li>Demographic level unemployment data (Monthly) - 
+                    <a href="https://download.bls.gov/pub/time.series/ln/">https://download.bls.gov/pub/time.series/ln/</a>
                 </li>
-                <li>Industry level employment data (Monthly) - https://download.bls.gov/pub/time.series/ce/
-                    <a href="https://download.bls.gov/pub/time.series/ce/"></a>
+                <li>Industry level employment data (Monthly) - 
+                    <a href="https://download.bls.gov/pub/time.series/ce/">https://download.bls.gov/pub/time.series/ce/</a>
                 </li>
             </ul>
         </div>
